lang/grammar/grammar.js
    source_file: $ => repeat($._declaration),

    // ─── Top-level declarations ───────────────────────────────────────────────

    _declaration: $ => choice(
      $.macro_declaration,
      $.schema_block,
      $.table_declaration,
      $.view_declaration,
      $.materialized_view_declaration,
      $.recursive_view_declaration,
      $.function_declaration,
      $.procedure_declaration,
      $.aggregate_declaration,
      $.enum_declaration,
      $._type_declaration,
      $.domain_declaration,
      $.virtual_type_declaration,
      $.sequence_declaration,
      $.role_declaration,
      $.tablespace_declaration,
      $.schema_declaration,
      $.extension_declaration,
      $.publication_declaration,
      $.subscription_declaration,
      $.event_trigger_declaration,
      $.default_privileges_declaration,
      $.fdw_declaration,
      $.foreign_server_declaration,
      $.user_mapping_declaration,
      $.text_search_config_declaration,
      $.text_search_dict_declaration,
      $.text_search_parser_declaration,
      $.text_search_template_declaration,
      $.collation_declaration,
      $.operator_declaration,
      $.operator_class_declaration,
      $.operator_family_declaration,
      $.cast_declaration,
      $.statistics_declaration,
    ),

    // ─── MACRO ────────────────────────────────────────────────────────────────

    macro_declaration: $ => seq(
      kw("MACRO"),
      field("name", $.identifier),
      choice(
        seq("(", field("body", $._paren_body), ")"),
        seq("{", field("body", $._brace_body), "}"),
      ),
    ),

    macro_spread: $ => seq(
      "...",
      field("name", $.identifier),
    ),

    // ─── SCHEMA block (scopes nested objects) ─────────────────────────────────

    schema_block: $ => seq(
      kw("SCHEMA"),
      field("name", $.identifier),
      "{",
      repeat(choice(
        $._declaration,
        $.owner_directive,
        $.comment_directive,
        $.renamed_from_directive,
      )),
      "}",
    ),

    // ─── TABLE ────────────────────────────────────────────────────────────────

    table_declaration: $ => seq(
      optional(choice(kw("UNLOGGED"), kw("FOREIGN"))),
      kw("TABLE"),
      field("name", $._object_ref),
      field("columns", $.column_list),
      optional($.dpg_block),
      optional(";"),
    ),

    column_list: $ => seq(
      "(",
      commaSep(choice(
        $.column_def,
        $.table_constraint,
        $.macro_spread,
      )),
      optional(","),
      ")",
    ),

    column_def: $ => seq(
      field("name", $.identifier),
      field("type", $.sql_type),
      repeat($._column_constraint),
    ),

    _column_constraint: $ => choice(
      seq(kw("NOT"), kw("NULL")),
      seq(kw("NULL")),
      seq(kw("UNIQUE")),
      seq(kw("PRIMARY"), kw("KEY")),
      seq(kw("DEFAULT"), $.sql_expression),
      seq(kw("REFERENCES"), $._object_ref, optional(seq("(", $.identifier, ")"))),
      seq(kw("GENERATED"), kw("ALWAYS"), kw("AS"), kw("IDENTITY")),
      seq(kw("GENERATED"), kw("BY"), kw("DEFAULT"), kw("AS"), kw("IDENTITY")),
      seq(kw("CHECK"), "(", $.sql_expression, ")"),
      seq(kw("CONSTRAINT"), $.identifier, $._column_constraint),
    ),

    table_constraint: $ => seq(
      optional(seq(kw("CONSTRAINT"), field("name", $.identifier))),
      choice(
        seq(kw("PRIMARY"), kw("KEY"), "(", commaSep1($.identifier), ")"),
        seq(kw("UNIQUE"), "(", commaSep1($.identifier), ")"),
        seq(kw("FOREIGN"), kw("KEY"), "(", commaSep1($.identifier), ")",
            kw("REFERENCES"), $._object_ref,
            optional(seq("(", commaSep1($.identifier), ")"))),
        seq(kw("CHECK"), "(", $.sql_expression, ")", optional(seq(kw("NOT"), kw("VALID")))),
        seq(kw("EXCLUDE"), $.sql_expression),
      ),
    ),

    // ─── VIEW ─────────────────────────────────────────────────────────────────

    view_declaration: $ => seq(
      kw("VIEW"),
      field("name", $._object_ref),
      optional(seq("(", commaSep1($.identifier), ")")),
      kw("AS"),
      field("query", $.sql_expression),
      optional($.dpg_block),
      optional(";"),
    ),

    materialized_view_declaration: $ => seq(
      kw("MATERIALIZED"), kw("VIEW"),
      field("name", $._object_ref),
      kw("AS"),
      field("query", $.sql_expression),
      optional(seq(kw("WITH"), optional(kw("NO")), kw("DATA"))),
      optional($.dpg_block),
      optional(";"),
    ),

    recursive_view_declaration: $ => seq(
      kw("RECURSIVE"), kw("VIEW"),
      field("name", $._object_ref),
      "(",
      commaSep1($.identifier),
      ")",
      kw("AS"),
      field("query", $.sql_expression),
      optional($.dpg_block),
      optional(";"),
    ),

    // ─── FUNCTION / PROCEDURE / AGGREGATE ────────────────────────────────────

    function_declaration: $ => seq(
      kw("FUNCTION"),
      field("name", $._object_ref),
      field("params", $.param_list),
      kw("RETURNS"),
      field("returns", $.sql_type),
      repeat($._function_option),
      kw("AS"),
      field("body", choice($.dollar_quoted_string, $.string_literal)),
      optional($.dpg_block),
      optional(";"),
    ),

    procedure_declaration: $ => seq(
      kw("PROCEDURE"),
      field("name", $._object_ref),
      field("params", $.param_list),
      kw("LANGUAGE"),
      field("language", $.identifier),
      kw("AS"),
      field("body", choice($.dollar_quoted_string, $.string_literal)),
      optional($.dpg_block),
      optional(";"),
    ),

    _function_option: $ => choice(
      seq(kw("LANGUAGE"), field("language", $.identifier)),
      kw("IMMUTABLE"), kw("STABLE"), kw("VOLATILE"),
      kw("STRICT"),
      seq(kw("SECURITY"), kw("DEFINER")),
      seq(kw("SECURITY"), kw("INVOKER")),
      seq(kw("PARALLEL"), choice(kw("UNSAFE"), kw("RESTRICTED"), kw("SAFE"))),
      seq(kw("COST"), $.number_literal),
      seq(kw("ROWS"), $.number_literal),
      seq(kw("SET"), $.identifier, "=", $.sql_expression),
    ),

    param_list: $ => seq("(", optional(commaSep($.param_def)), ")"),

    param_def: $ => seq(
      optional(choice(kw("IN"), kw("OUT"), kw("INOUT"), kw("VARIADIC"))),
      optional(field("name", $.identifier)),
      field("type", $.sql_type),
      optional(seq("=", $.sql_expression)),
    ),

    // ─── ENUM ─────────────────────────────────────────────────────────────────

    enum_declaration: $ => seq(
      kw("ENUM"),
      field("name", $._object_ref),
      "(",
      commaSep1($.string_literal),
      ")",
      optional($.dpg_block),
      optional(";"),
    ),

    // ─── TYPE (composite / range / base / virtual) ────────────────────────────

    composite_type_declaration: $ => seq(
      kw("TYPE"),
      field("name", $._object_ref),
      kw("AS"),
      "(",
      commaSep(seq($.identifier, $.sql_type)),
      ")",
      optional($.dpg_block),
      optional(";"),
    ),

    domain_declaration: $ => seq(
      kw("DOMAIN"),
      field("name", $._object_ref),
      kw("AS"),
      field("base", $.sql_type),
      optional($.dpg_block),
      optional(";"),
    ),

    virtual_type_declaration: $ => seq(
      kw("VIRTUAL"), kw("TYPE"),
      field("name", $._object_ref),
      kw("AS"),
      field("expression", $.sql_type),
      optional($.dpg_block),
      optional(";"),
    ),

    // ─── SEQUENCE ─────────────────────────────────────────────────────────────

    sequence_declaration: $ => seq(
      kw("SEQUENCE"),
      field("name", $._object_ref),
      repeat($._sequence_option),
      optional($.dpg_block),
      optional(";"),
    ),

    _sequence_option: $ => choice(
      seq(kw("AS"), $.sql_type),
      seq(kw("INCREMENT"), optional(kw("BY")), $.number_literal),
      seq(kw("MINVALUE"), $.number_literal),
      seq(kw("NO"), kw("MINVALUE")),
      seq(kw("MAXVALUE"), $.number_literal),
      seq(kw("NO"), kw("MAXVALUE")),
      seq(kw("START"), optional(kw("WITH")), $.number_literal),
      seq(kw("CACHE"), $.number_literal),
      kw("CYCLE"),
      seq(kw("NO"), kw("CYCLE")),
      seq(kw("OWNED"), kw("BY"), $._object_ref),
    ),

    // ─── ROLE ─────────────────────────────────────────────────────────────────

    role_declaration: $ => seq(
      kw("ROLE"),
      field("name", $.identifier),
      repeat($._role_option),
      optional($.dpg_block),
      optional(";"),
    ),

    _role_option: $ => choice(
      kw("LOGIN"), kw("NOLOGIN"),
      kw("SUPERUSER"), kw("NOSUPERUSER"),
      kw("CREATEDB"), kw("NOCREATEDB"),
      kw("CREATEROLE"), kw("NOCREATEROLE"),
      kw("INHERIT"), kw("NOINHERIT"),
      kw("REPLICATION"), kw("NOREPLICATION"),
      kw("BYPASSRLS"), kw("NOBYPASSRLS"),
      seq(kw("CONNECTION"), kw("LIMIT"), $.number_literal),
      seq(kw("PASSWORD"), $.string_literal),
      seq(kw("VALID"), kw("UNTIL"), $.string_literal),
      seq(kw("IN"), kw("ROLE"), commaSep1($.identifier)),
      seq(kw("ROLE"), commaSep1($.identifier)),
      seq(kw("ADMIN"), commaSep1($.identifier)),
    ),

    // ─── TABLESPACE ───────────────────────────────────────────────────────────

    extension_declaration: $ => seq(
      kw("EXTENSION"),
      field("name", $.identifier),
      optional(seq(kw("SCHEMA"), $.identifier)),
      optional(seq(kw("VERSION"), $.string_literal)),
      optional(kw("CASCADE")),
      ";",
    ),

    // ─── PUBLICATION / SUBSCRIPTION ───────────────────────────────────────────

    dpg_block: $ => seq(
      "{",
      repeat(choice($._block_directive, $.macro_spread)),
      "}",
    ),

    _block_directive: $ => choice(
      $.comment_directive,
      $.owner_directive,
      $.renamed_from_directive,
      $.protected_directive,
      $.deprecated_directive,
      $.drop_cascade_directive,
      $.indices_block,
      $.policies_block,
      $.triggers_block,
      $.columns_block,
      $.constraints_block,
      $.grants_block,
      $.revocations_block,
      $.partitions_block,
      $.migrate_remove_directive,
      $.grant_directive,
      $.revoke_directive,
      $.default_directive,
      $.not_null_directive,
      $.check_directive,
      $.mapping_directive,
      $.opfamily_operator_member,
      $.opfamily_function_member,
      $.name_map_directive,
      $.name_maps_block,
    ),

    comment_directive: $ => seq(
      kw("COMMENT"), field("text", $.string_literal), ";",
    ),

    owner_directive: $ => seq(
      kw("OWNER"), field("role", $.identifier), ";",
    ),

    renamed_from_directive: $ => seq(
      kw("RENAMED"), kw("FROM"), field("old_name", $.identifier), ";",
    ),

    deprecated_directive: $ => seq(
      kw("DEPRECATED"), field("message", optional($.string_literal)), ";",
    ),

    indices_block: $ => seq(
      kw("INDICES"), "{", repeat($.index_def), "}",
    ),

    index_def: $ => seq(
      field("name", $.identifier),
      optional(choice(kw("UNIQUE"), kw("FULLTEXT"), kw("SPATIAL"))),
      optional(seq(kw("USING"), $.identifier)),
      "(", commaSep1($.index_column), ")",
      optional(seq(kw("WHERE"), $.sql_expression)),
      optional(seq(kw("WITH"), "(", commaSep1($.option_pair), ")")),
      ";",
    ),

    index_column: $ => seq(
      $.identifier,
      optional(choice(kw("ASC"), kw("DESC"))),
      optional(seq(kw("NULLS"), choice(kw("FIRST"), kw("LAST")))),
    ),

    grants_block: $ => seq(
      kw("GRANTS"), "{", repeat($.grant_directive), "}",
    ),

    grant_directive: $ => seq(
      field("privilege", $.privilege_spec),
      kw("TO"), commaSep1(choice(kw("PUBLIC"), $.identifier)),
      optional(seq(kw("WITH"), kw("GRANT"), kw("OPTION"))),
      ";",
    ),

    privilege_spec: $ => seq(
      choice(
        seq(kw("ALL"), optional(kw("PRIVILEGES"))),
        kw("SELECT"), kw("INSERT"), kw("UPDATE"), kw("DELETE"),
        kw("TRUNCATE"), kw("REFERENCES"), kw("TRIGGER"),
        kw("USAGE"), kw("EXECUTE"), kw("CREATE"), kw("CONNECT"), kw("TEMPORARY"),
      ),
      optional(seq(
        kw("ON"),
        optional(choice(
          kw("TABLES"), kw("SEQUENCES"), kw("FUNCTIONS"), kw("ROUTINES"),
          kw("TYPE"), kw("SCHEMA"), kw("DATABASE"),
        )),
      )),
    ),

    migrate_remove_directive: $ => seq(
      kw("MIGRATE"), kw("REMOVE"),
      "(", field("value", $.string_literal), ")",
      "{",
      repeat(seq($.sql_expression, ";")),
      "}",
    ),

    // NAME MAP [tool] TO <rule|"LiteralName"> ;
    _object_ref: $ => choice(
      seq($.identifier, ".", $.identifier, ".", $.identifier),
      seq($.identifier, ".", $.identifier),
      $.identifier,
    ),

    sql_type: $ => seq(
      $._object_ref,
      optional(seq("(", commaSep1($.number_literal), ")")),
      optional(seq("[", optional($.number_literal), "]")),
      optional(seq(kw("WITH"), kw("TIME"), kw("ZONE"))),
      optional(seq(kw("WITHOUT"), kw("TIME"), kw("ZONE"))),
    ),

    // Opaque SQL expression: consumes tokens until top-level { ; or , (comma breaks
    // out so it can be used inside commaSep contexts).  $.identifier is listed
    // explicitly so that word-shaped tokens (SELECT, FROM, WHERE, …) are accepted
    // even when they share spelling with DPG keywords that have lower GLR priority
    // in this position.
    sql_expression: $ => prec.left(repeat1(
      choice(
        $.identifier,
        $.string_literal,
        $.dollar_quoted_string,
        $.number_literal,
        $.boolean_literal,
        seq("(", optional($.sql_expression), ")"),
        /[^(){};,'"$/\s]+/,
        "/",
        "$",
      ),
    )),

    // ─── Macro helpers ────────────────────────────────────────────────────────

    _paren_body: $ => repeat1(choice(
      $.column_def,
      $.table_constraint,
      $.macro_spread,
      ",",
    )),

    _brace_body: $ => repeat1(choice(
      $._block_directive,
      $.macro_spread,
    )),

    // ─── Atoms ────────────────────────────────────────────────────────────────

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_$]*/,

    // DPG uses single-quoted strings for directive messages (COMMENT, DEPRECATED)
    // matching real PostgreSQL string literal syntax.  Double-quoted strings for
    // identifiers (OWNER, NAME MAP literals) are also accepted as string_literal.
    string_literal: _ => choice(
      seq("'", /[^']*/, "'"),
      seq('"', /[^"]*/, '"'),
    ),

    number_literal: _ => /-?[0-9]+(\.[0-9]+)?/,

    line_comment: _ => token(seq("--", /.*/)),

    // The external scanner consumes "/*" content AND the closing "*/".
    block_comment: $ => seq("/*", $._block_comment_content),
  },
});

function kw(word) {
  return alias(reserved(word), word);
}

function reserved(word) {
  return token(prec(1, new RegExp(word, "i")));
}

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)));
}

function commaSep(rule) {
  return optional(commaSep1(rule));
}
